# tradelab

./: .env.example  .gitignore  README.md  config.py  main.py  requirements.txt
analysis/: anomaly.py  llm.py  sentiment.py
data/: news_collector.py  price_collector.py  signal_collectors.py
db/: database.py  models.py
desktop/: .gitignore  README.md
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/icons/: icon.icns  make_source.py
desktop/src-tauri/src/: main.rs
desktop/ui/: index.html  settings.html
docs/: API_KEYS.md  CRON.md  PLAN.md  SETUP.md  news.md
docs/learn/account/: account_strategy.md  overseas_capital_gain.md
docs/learn/crypto/: funding_rate.md  open_interest.md
routes/: api.py  auth.py  views.py
scripts/: cache_nxt_close.py  collect_dart.py  collect_macro.py  collect_naver_buzz.py  collect_news.py  collect_signals.py  detect_anomaly.py  generate_theme_briefs.py  health_check.py  import_upbit_csv.py  seed_watchlist.py
services/: learn.py  paper_trader.py  real_trader.py  theme_brief.py  themes.py  widget_pricing.py
static/: manifest.json  sw.js
static/css/: app.css
static/js/: app.js
templates/: base.html
templates/pages/: dashboard.html  learn.html  learn_article.html  login.html  my.html  my_report.html  news.html  portfolio.html  research.html  research_detail.html  research_snapshot.html  settings.html  signals.html  themes.html  themes_detail.html
templates/partials/: _my_accounts_section.html  _my_trades_section.html  header.html  sidebar.html
(+8 files in other folders)
